# py-dem-bones

./: .cibuildwheel.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  GITHUB_ACTIONS_OPTIMIZATION.md  LICENSE  MANIFEST.in  README.md  README_CI_OPTIMIZATION.md  README_PYTHON37_CI.md  README_zh.md  VFX_PLATFORM_SUPPORT.md  build.bat  index.html  install.py  install_py37.py  noxfile.py  pyproject.toml  setup.py  test_build.py  test_module.py  test_multiple_python_versions.py  test_py37.py  test_with_uv.py  version_template.py
.github/: CITATION.cff
.github/actions/build-wheels/: action.yml
.github/actions/setup-ccache/: action.yml
.github/workflows/: README.md  build_wheels.yml  bumpversion.yml  docs.yml  lint.yml  main.yml  matrix-python.yml  optimized_build.yml  optimized_test.yml  pr_build_test.yml  release.yml  reusable-jobs.yml  workflow-dispatch.yml
docs/: api.rst  changelog.rst  ci_cd.md  conf.py  contributing.rst  convert_svg_to_png.py  examples.rst  index.rst  installation.rst  python_api.rst  usage.rst
examples/: README.txt  blendshapes_example.py  logging_example.py  maya_rbf_demo.py
latest/: README.html  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  search.html  searchindex.js  usage.html
latest/_modules/: index.html
latest/_sources/: changelog.rst.txt  sg_execution_times.rst.txt  usage.rst.txt
nox_actions/: __init__.py  build.py  codetest.py  docs.py  lint.py  submodules.py  utils.py
pr-preview/10/: objects.inv
pr-preview/17/: .buildinfo  README.html  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  search.html  searchindex.js  sg_execution_times.html  usage.html
pr-preview/22/: changelog.html  usage.html
pr-preview/23/: searchindex.js
pr-preview/24/: README.html
pr-preview/25/: ci_cd.html  installation.html  search.html
pr-preview/26/: api.html
pr-preview/30/: .buildinfo  changelog.html  usage.html
pr-preview/31/: README.html  contributing.html  index.html
pr-preview/34/: api.html  changelog.html  ci_cd.html  examples.html  installation.html  objects.inv  rbf_api.html  rbf_features.html  searchindex.js  usage.html
pr-preview/35/: .buildinfo  genindex.html  python_api.html  search.html
pr-preview/36/: .buildinfo  README.html  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/37/: api.html  ci_cd.html
pr-preview/38/: .buildinfo  genindex.html  installation.html  objects.inv  python_api.html  rbf_api.html  searchindex.js  usage.html
pr-preview/42/: changelog.html  search.html
pr-preview/43/: genindex.html  index.html
pr-preview/44/: examples.html  python_api.html  rbf_features.html
pr-preview/46/: README.html  contributing.html  index.html  installation.html  objects.inv  python_api.html  rbf_features.html  searchindex.js
pr-preview/48/: examples.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/51/: api.html  changelog.html  ci_cd.html  contributing.html  genindex.html  objects.inv
pr-preview/52/: .buildinfo  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/54/: .buildinfo  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/55/: .buildinfo  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/56/: .buildinfo  api.html  changelog.html  ci_cd.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/58/: .buildinfo  README.html  api.html  changelog.html  ci_cd.html  cibuildwheel.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  searchindex.js  usage.html
pr-preview/59/: .buildinfo  README.html  api.html  changelog.html  ci_cd.html  cibuildwheel.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/60/: .buildinfo  README.html  api.html  changelog.html  ci_cd.html  cibuildwheel.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  python_api.html  rbf_api.html  rbf_features.html  search.html  usage.html
pr-preview/61/: README.html  ci_cd.html  cibuildwheel.html  contributing.html  examples.html  genindex.html  objects.inv  python_api.html  rbf_features.html
pr-preview/62/: .buildinfo  api.html  changelog.html  index.html  installation.html  rbf_api.html  search.html  searchindex.js  usage.html
pr-preview/7/: index.html
src/binding/: logger.h  py_dem_bones.cpp  py_dem_bones_ext.cpp  py_dem_bones_module.cpp
src/py_dem_bones/: __init__.py  __init__.pyi  __version__.py  _py_dem_bones.pyi  base.py  base.pyi  dll_utils.py  exceptions.py  exceptions.pyi  logging.py  utils.py  utils.pyi
src/py_dem_bones-stubs/: __init__.pyi
tests/: PyDemBonesTestSuite.py  test_abi3.py  test_base_extended.py  test_basic.py  test_compute.py  test_dcc_interface.py  test_exceptions.py  test_interface.py  test_utils.py  test_wrapper.py
tools/wheels/: build_wheels.py  build_windows_wheel.py
(+63 files in other folders)
