[build-system]
requires = [
    "setuptools>=67.8.0",
    "wheel>=0.40.0",
    "pybind11>=2.10.0",
    "numpy>=1.20.0",
    "cmake>=3.15.0",
]
build-backend = "setuptools.build_meta"

[tool.scikit-build]
# Basic configuration
wheel.packages = ["src/py_dem_bones"]
wheel.exclude = ["tests/*"]
wheel.expand-macos-universal-tags = true
sdist.include = ["src/py_dem_bones/*", "src/binding/*", "CMakeLists.txt", "LICENSE.md", "README.md", "extern/dem-bones/*", "extern/eigen/*"]
sdist.exclude = ["tests/data/*"]

[tool.scikit-build.cmake]
version = ">=3.26"
build-type = "Release"

[tool.scikit-build.cmake.define]
PYTHON_LIMITED_API = "OFF"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
# Ensure symbols are properly exported on Windows
CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS = "ON"
# Disable ABI3 mode
SKBUILD_SOABI = "OFF"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag-format = "$version"
update_changelog_on_bump = true
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf", "ci", "build", "docs", "test", "chore"]
version-files = [
    "src/py_dem_bones/__version__.py:__version__",
    "setup.py:version = ",
    "docs/conf.py:release",
    "docs/conf.py:version",
    ".github/CITATION.cff:version",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# cibuildwheel configuration moved to .cibuildwheel.toml

[tool.ruff]
line-length = 120
target-version = "py38"
# Ignore extern directory and generated stub files
exclude = ["extern", "**/*.pyi"]
src = ["src", "nox_actions", "noxfile.py"]
select = ["E", "F", "W", "I"]
ignore = ["W293"]  # Ignore whitespace warnings in blank lines

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"noxfile.py" = ["E402"]
"docs/conf.py" = ["E402", "F401"]

[tool.isort]
profile = "black"
line_length = 120
skip = ["extern"]
skip_glob = ["*.pyi"]
