[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "pybind11>=2.10.0",
    "numpy>=1.20.0",
    "setuptools>=42.0.0",
    "wheel>=0.36.0",
    "setuptools_scm>=8.0.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "py-dem-bones"
dynamic = ["version"]
description = "Python bindings for the Dem Bones library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Long Hao", email = "hal.long@outlook.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "nox>=2023.4.22",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.14.1",
    "sphinx-autobuild>=2021.3.14",
    "pybind11-stubgen>=0.16.0",
    "myst-parser>=2.0.0",
    "sphinx-gallery>=0.13.0",
    "pillow>=9.0.0",
    "matplotlib>=3.5.0",
    "myst-sphinx-gallery>=0.3.0",
    "myst-nb>=1.0.0",
    "tomli>=2.0.0",
]
docs-linux = [
    "cairosvg>=2.7.0",
]
lint = [
    "black<25.1.1",
    "ruff<0.0.270",
    "isort<6.0.2",
    "autoflake>=2.0.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.2",
    "cibuildwheel>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/loonghao/py-dem-bones"
Documentation = "https://loonghao.github.io/py-dem-bones"
Issues = "https://github.com/loonghao/py-dem-bones/issues"
Changelog = "https://github.com/loonghao/py-dem-bones/blob/main/CHANGELOG.md"

[tool.scikit-build]
# Basic configuration
wheel.packages = ["src/py_dem_bones"]
wheel.exclude = ["tests/*"]
wheel.expand-macos-universal-tags = true
sdist.include = ["src/py_dem_bones/*", "src/binding/*", "CMakeLists.txt", "LICENSE.md", "README.md", "extern/dem-bones/*", "extern/eigen/*"]
sdist.exclude = ["tests/data/*"]
# Enable experimental features
experimental = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# Format: 1.2.3 (without 'v' prefix)
tag_regex = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)(?P<dev>-[a-zA-Z0-9]+)?$"
local_scheme = "no-local-version"
fallback_version = "0.8.0"  # Updated fallback version

[[tool.scikit-build.generate]]
path = "docs/conf.py"
location = "source"
template = '''release = '${version}' '''

[[tool.scikit-build.generate]]
path = "docs/conf.py"
location = "source"
template = '''version = '${version}' '''

[[tool.scikit-build.generate]]
path = ".github/CITATION.cff"
location = "source"
template = '''version: ${version}'''

[[tool.scikit-build.generate]]
path = "src/py_dem_bones/__version__.py"
location = "source"
template = '''
# file generated by setuptools-scm
# don't change, don't track in version control

__all__ = [
    "__version__",
    "__version_tuple__",
    "version",
    "version_tuple",
    "__dem_bones_version__",
]

TYPE_CHECKING = False
if TYPE_CHECKING:
    from typing import Tuple, Union

    VERSION_TUPLE = Tuple[Union[int, str], ...]
else:
    VERSION_TUPLE = object

version: str
__version__: str
__dem_bones_version__: str
__version_tuple__: VERSION_TUPLE
version_tuple: VERSION_TUPLE

__version__ = version = "${version}"
__dem_bones_version__ = "1.2.1"  # Hardcoded Dem Bones library version
__version_tuple__ = version_tuple = tuple("${version}".split("."))
'''

[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "Release"

[tool.scikit-build.cmake.define]
PYTHON_LIMITED_API = "OFF"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
# Ensure symbols are properly exported on Windows
CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS = "ON"
# Disable ABI3 mode
SKBUILD_SOABI = "OFF"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag-format = "$version"  # Format: 1.2.3 (without 'v' prefix)
update_changelog_on_bump = true
change_type_order = ["BREAKING CHANGE", "feat", "fix", "refactor", "perf", "ci", "build", "docs", "test", "chore"]
version_files = [
    "pyproject.toml:fallback_version",
    "src/py_dem_bones/__version__.py:__version__",
    "docs/conf.py:version_str = "
]
# Version bump rules
major_version_zero = true  # Treat breaking changes as minor releases when major version is 0
bump_message = "bump: version $current_version → $new_version"
# Commit message rules
commit_parser = "^(?P<change_type>feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(?:\\((?P<scope>[^()\r\n]*)\\)|\\()?(?P<breaking>!)?:\\s(?P<message>.*)?"
version_scheme = "semver"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# cibuildwheel configuration moved to .cibuildwheel.toml

[tool.ruff]
line-length = 120
target-version = "py38"
# Ignore extern directory and generated stub files
exclude = ["extern", "**/*.pyi"]
src = ["src", "nox_actions", "noxfile.py"]
select = ["E", "F", "W", "I"]
ignore = ["W293"]  # Ignore whitespace warnings in blank lines

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"noxfile.py" = ["E402"]
"docs/conf.py" = ["E402", "F401"]

[tool.isort]
profile = "black"
line_length = 120
skip = ["extern"]
skip_glob = ["*.pyi"]
